k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learningaier-backend
  labels:
    app: learningaier-backend
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-cors-config"}'
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: learningaier-backend
